[bug fix] fixed dark mode

--- a/src/theme/base/reset.scss
+++ b/src/theme/base/reset.scss
@@ -6,7 +6,7 @@ body {
     font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', Arial, sans-serif;
     font-weight: 400;
     font-size: $--font-size-base;
-    color: var(--color-text-primary);
+    color: var(--color-text-regular);
     -webkit-font-smoothing: antialiased;
     background-color: var(--color-html-bg, '#fff');
     margin: 0;
